--- a/static/css/app.css
+++ b/static/css/app.css
@@ -8,9 +8,23 @@ html {
   font-family: 'Montserrat';
   font-size: 10px;
 }
-body {
-  background-color: rgb(37, 38, 39);
+/* body {
+  background-color: var(--color-1);
   color: white;
+} */
+body {
+  background-color: var(--color-1);
+  color: var(--color-2);
+}
+body[data-theme='light'] {
+  --color-1: white;
+  --color-2: rgb(37, 38, 39);
+  --color-3: rgb(230, 230, 230);
+}
+body[data-theme='dark'] {
+  --color-1: rgb(37, 38, 39);
+  --color-2: white;
+  --color-3: rgb(51, 55, 59);
 }
 section {
   min-height: 100vh;
@@ -31,13 +45,14 @@ section {
   width: 90%;
   max-width: 500px;
   margin: 0 auto;
-  background-color: rgb(51, 55, 59);
+  background-color: var(--color-3);
   border-radius: 8px;
   padding: 3rem;
   display: flex;
   flex-direction: column;
 }
 .container p {
+  /* color: var(--color-1); */
   font-size: 2rem;
   font-weight: 300;
   line-height: 3rem;
@@ -48,10 +63,52 @@ button {
   width: fit-content;
   padding: 2rem;
   font-size: 2rem;
-  background-color: rgb(25, 28, 29);
-  color: white;
+  background-color: var(--color-1);
+  color: var(--color-2);
   border: none;
   border-radius: 4px;
   cursor: pointer;
   align-self: flex-end;
+}
+
+.theme-switcher {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+}
+input {
+  width: 0;
+  height: 0;
+  display: none;
+  visibility: hidden;
+}
+label {
+  cursor: pointer;
+  display: block;
+  text-indent: -9999px;
+  height: 30px;
+  width: 60px;
+  border-radius: 50px;
+  background-color: var(--color-3);
+  transition: 0.5s ease background-color;
+}
+label::after {
+  position: absolute;
+  content: '';
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background-color: rgb(46, 42, 68);
+  transition: 0.5s ease;
+}
+input:checked + label::after {
+  left: calc(100% - 25px);
+  background-color: aliceblue;
+}
+input:checked + label {
+  background-color: rgb(25, 26, 37);
+  border: 2px solid whitesmoke;
 }
